--- a/Plain.CSS
+++ b/Plain.CSS
@@ -3,7 +3,7 @@
 
 /* User Settings */
 :root {
-    --theme-name: "Discord Reborn";
+    --theme-name: "Custom Fork";
 }
 /* Dark Mode Settings */
 
